--- a/world-bank-app/package.json
+++ b/world-bank-app/package.json
@@ -11,7 +11,9 @@
     "react-bootstrap": "^2.1.2",
     "react-bootstrap-counter": "^1.0.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.2",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
