--- a/world-bank-app/package.json
+++ b/world-bank-app/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-bootstrap-counter": "^1.0.1",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2",
     "react-scripts": "5.0.0",
