--- a/world-bank-app/package.json
+++ b/world-bank-app/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap-counter": "^1.0.1",
     "react-bootstrap-typeahead": "^6.0.0-alpha.8",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
